Added some styles and a profile picture

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -66,10 +66,12 @@
   display: inline-block;
   color: mintcream;
   text-decoration: none;
+  font-size: 20px;
 }
 
 .links a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .cover {
