--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,37 +1,16 @@
-.navbar {
-  background: url('../images/cats.jpg');
-  background-position: 50px;
-  width: 100vw;
-  height: 5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 1px solid black;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: #999;
-  z-index: 1;
-  height: 5vh;
-  width: 100vw;
-  opacity: 0.3;
-  z-index: 1;
-}
-
 .main {
   width: 100vw;
-  height: 95vh;
+  height: 100vh;
   display: flex;
+}
+
+#main {
+  overflow-y: scroll;
 }
 
 .sidebar {
   background: #374140;
-  height: 95vh;
+  height: 100vh;
   width: 25vw;
   border-right: 1px solid black;
   box-shadow: inset -7px 0 18px -7px #000000;
@@ -77,7 +56,7 @@
 .cover {
   background: white;
   width: 75vw;
-  height: 95vh;
+  height: 100vh;
   border-radius: 2px;
   padding: 15px;
 }
@@ -90,8 +69,34 @@
   margin-left: 10px;
 }
 
+.note-container {
+  height: 62%;
+  display: flex;
+  align-items: flex-end;
+}
+
+.note {
+  color: mintcream;
+  font-family: 'Cutive Mono', monospace;
+  font-size: 15px;
+  margin: 10px;
+}
+
+.note i {
+  font-size: 10px;
+}
+
 @media(max-width: 320px){
   .sidebar {
     width: 100vw;
   }
+}
+
+.urgent-message {
+  font-size: 20px;
+  border-left: 10px solid red;
+  height: 30px;
+  padding-left: 5px;
+  display: flex;
+  align-items: center;
 }
