Finished project explainations

--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
 @import url('https://fonts.googleapis.com/css?family=Questrial');
-@import url('https://fonts.googleapis.com/css?family=Alegreya');
+@import url('https://fonts.googleapis.com/css?family=Amiri');
 
 body {
   background: #374140;
