--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -8,12 +8,13 @@
 .profile-img {
   width: 250px;
   height: 250px;
+  margin-right: 100px;
 }
 
 .about-title-container {
   width: 80%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .about-title {
@@ -22,7 +23,7 @@
 }
 
 .about-body-content {
-  font-family: 'Alegreya', serif;
+  font-family: 'Amiri', serif;
   font-size: 20px;
   margin-top: 20px;
   line-height: 25px;
@@ -33,21 +34,10 @@
   font-size: 30px;
   font-family: 'Questrial', sans-serif;
   margin-bottom: 10px;
+  border-left: 10px solid lightgreen;
+  padding-left: 5px;
 }
 
 .about-body-content p {
   margin-top: 10px;
-}
-
-.about-this-site {
-  border: 1px solid gray;
-  border-radius: 3px;
-  padding: 10px;
-  background: lightgoldenrodyellow;
-  margin-top: 25px;
-  /* padding-left: 5px; */
-}
-
-.about-this-site h2 {
-  margin-top: 5px;
 }
