--- a/assets/styles/blog.css
+++ b/assets/styles/blog.css
@@ -11,7 +11,7 @@
 }
 
 .blog-content {
-  font-family: 'Alegreya', serif;
+  font-family: 'Amiri', serif;
   font-size: 20px;
   margin-top: 20px;
   line-height: 25px;
