--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -20,7 +20,7 @@
 }
 
 .face-text {
-  font-family: 'Alegreya', serif;
+  font-family: 'Amiri', serif;
   /* color: #414C4B; */
   font-size: 20px;
 }
@@ -30,7 +30,7 @@
 }
 
 .contact-end {
-  font-family: 'Alegreya', serif;
+  font-family: 'Amiri', serif;
   margin-top: 60px;
   font-size: 20px;
 }
