--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,7 +35,7 @@
 .links {
   font-family: 'Cutive Mono', monospace;
   margin-left: 10px;
-  width: 8vw;
+  width: 15vw;
   height: 20vh;
   display: flex;
   flex-direction: column;
@@ -93,8 +93,19 @@
 }
 
 .urgent-message {
+  font-family: 'Amiri', serif;
   font-size: 20px;
   border-left: 10px solid red;
+  height: 30px;
+  padding-left: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.blue-message {
+  font-family: 'Amiri', serif;
+  font-size: 20px;
+  border-left: 10px solid lightblue;
   height: 30px;
   padding-left: 5px;
   display: flex;
