--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -3,3 +3,29 @@
   font-size: 60px;
   margin-bottom: 30px;
 }
+
+.project-item {
+  margin-top: 50px;
+}
+
+.project-item h2 {
+  font-family: 'Questrial', sans-serif;
+  font-size: 30px;
+}
+
+.project-item p {
+  font-family: 'Amiri', serif;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.private {
+  font-size: 15px;
+  color: grey;
+}
+
+.final-thoughts {
+  border-top: 5px solid red;
+  margin-top: 25px;
+  padding-top: 25px;
+}
